# mg-firmware

./: .gitignore  CMakeLists.txt  README.md  install.sh  mos.yml
fs/: conf1.json.dist  index.html
saved_deps/ota-http-client/: README.md  mos.yml
saved_deps/ota-http-client/include/: mgos_ota_http_client.h
src/: define.h  handler.bak  main.cpp
src/Hardware/: ESPDigitalPin.cpp  ESPDigitalPin.h  Platform.cpp  Platform.h
src/Unit/: SwitchUnit.cpp  SwitchUnit.h  TemperatureSensorUnit.cpp  TemperatureSensorUnit.h  Unit.cpp  Unit.h  VisitSensorUnit.cpp  VisitSensorUnit.h
